--- a/misc/libcec/Makefile
+++ b/misc/libcec/Makefile
@@ -1,27 +1,27 @@
-# $NetBSD: Makefile,v 1.2 2015/04/28 01:27:40 mef Exp $
+# $NetBSD: Makefile,v 1.3 2019/09/08 12:30:53 nia Exp $
 
-DISTNAME=	libcec-2.2.0-repack
-PKGNAME=	${DISTNAME:S/-repack//}
+DISTNAME=	libcec-4.0.4
 CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_GITHUB:=Pulse-Eight/}
 GITHUB_PROJECT=	libcec
-GITHUB_TAG=	${DISTNAME}
+GITHUB_TAG=	libcec-${PKGVERSION_NOREV}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://libcec.pulse-eight.com/
 COMMENT=	USB CEC Adapter communication Library
 LICENSE=	gnu-gpl-v2
 
-WRKSRC=		${WRKDIR}/libcec-libcec-2.2.0-repack
-GNU_CONFIGURE=	yes
-USE_TOOLS+=	pkg-config gmake autoconf automake autoreconf
-USE_LANGUAGES=	c c++
-USE_LIBTOOL=	yes
+USE_CMAKE=	yes
+USE_TOOLS+=	pkg-config
+USE_LANGUAGES=	c c++11
+
+GCC_REQD+=	4.8
+
+CMAKE_ARGS+=	-DSKIP_PYTHON_WRAPPER=ON
+
+REPLACE_PYTHON+=	src/pyCecClient/pyCecClient.py
 
 PKGCONFIG_OVERRIDE+=	src/lib/libcec.pc.in
-
-pre-configure:
-	cd ${WRKSRC} && autoreconf -fi
 
 .if !empty(MACHINE_ARCH:M*arm*)
 CONFIGURE_ARGS+=	--with-rpi-include-path=${PREFIX}/include
@@ -29,5 +29,7 @@ CONFIGURE_ARGS+=	--with-rpi-lib-path=${PREFIX}/lib
 .include "../../misc/raspberrypi-userland/buildlink3.mk"
 .endif
 
+.include "../../devel/p8-platform/buildlink3.mk"
+.include "../../lang/python/application.mk"
 .include "../../x11/libXrandr/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
