--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.845 2019/08/30 19:06:34 nia Exp $
+# $NetBSD: Makefile,v 1.846 2019/09/08 20:41:10 nia Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -135,6 +135,7 @@ SUBDIR+=	freetype
 SUBDIR+=	freetype-lib
 SUBDIR+=	freetype-utils
 SUBDIR+=	freetype2
+SUBDIR+=	ftgl
 SUBDIR+=	fujiplay
 SUBDIR+=	g2
 SUBDIR+=	gd
