--- a/pkgtools/url2pkg/Makefile
+++ b/pkgtools/url2pkg/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.95 2019/08/18 13:32:21 rillig Exp $
+# $NetBSD: Makefile,v 1.96 2019/09/09 08:08:02 maya Exp $
 
-PKGNAME=	url2pkg-2.32
+PKGNAME=	url2pkg-2.33
 CATEGORIES=	pkgtools
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
