--- a/databases/php-redis3/Makefile
+++ b/databases/php-redis3/Makefile
@@ -1,18 +1,18 @@
-# $NetBSD: Makefile,v 1.4 2017/08/18 10:14:21 taca Exp $
+# $NetBSD: Makefile,v 1.5 2019/09/10 13:26:15 otis Exp $
 #
 
 MODNAME=	redis3
 PKGMODNAME=	redis
-PECL_VERSION=	3.1.3
+PECL_VERSION=	3.1.6
 PECL_LEGACY_VERSION_SCHEME=	yes
 PECL_DISTNAME=	${PECL_VERSION}
 CATEGORIES=	databases
-MASTER_SITES=	${MASTER_SITE_GITHUB:=nicolasff/}
+MASTER_SITES=	${MASTER_SITE_GITHUB:=phpredis/}
 GITHUB_PROJECT=	phpredis
 EXTRACT_SUFX=	.tar.gz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://github.com/nicolasff/phpredis
+HOMEPAGE=	https://github.com/phpredis/phpredis
 COMMENT=	PHP extension for Redis
 LICENSE=	php
 
