--- a/www/SOGo4/Makefile
+++ b/www/SOGo4/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.19 2019/08/22 12:23:51 ryoon Exp $
+# $NetBSD: Makefile,v 1.1 2019/09/11 12:01:54 tm Exp $
 #
 
-DISTNAME=	SOGo-3.2.9
-PKGREVISION=	14
+DISTNAME=	SOGo-4.0.8
 CATEGORIES=	www
 MASTER_SITES=	http://www.sogo.nu/files/downloads/SOGo/Sources/
 
@@ -54,6 +53,8 @@ SUBST_STAGE.paths=      pre-configure
 SUBST_FILES.paths=      SoObjects/SOGo/SOGoSystemDefaults.m
 SUBST_SED.paths=        -e 's,/etc/sogo/,${PKG_SYSCONFDIR}/,g'
 
+BUILDLINK_TRANSFORM.SunOS+=	rm:-pie
+
 FIX_PERMS= \
 	SoObjects/Mailer/SOGoMailLithuanianForward.wo/SOGoMailLithuanianForward.html \
 	SoObjects/Mailer/SOGoMailLithuanianForward.wo/SOGoMailLithuanianForward.wod \
@@ -84,7 +85,7 @@ post-install:
 
 .include "../../devel/gnustep-base/buildlink3.mk"
 .include "../../devel/gnustep-make/buildlink3.mk"
-.include "../../devel/SOPE/buildlink3.mk"
+.include "../../devel/SOPE4/buildlink3.mk"
 .include "../../devel/libmemcached/buildlink3.mk"
 .include "../../textproc/libxml2/buildlink3.mk"
 .include "../../www/curl/buildlink3.mk"
