--- a/www/netsurf/Makefile
+++ b/www/netsurf/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.79 2019/08/22 12:23:53 ryoon Exp $
+# $NetBSD: Makefile,v 1.80 2019/09/12 15:53:02 nros Exp $
 
-DISTNAME=	netsurf-all-3.8
+DISTNAME=	netsurf-all-3.9
 PKGNAME=	${DISTNAME:S/-all//}
-PKGREVISION=	9
 CATEGORIES=	www
 MASTER_SITES=	http://download.netsurf-browser.org/netsurf/releases/source-full/
 
@@ -36,6 +35,9 @@ INSTALLATION_DIRS+=	share/netsurf bin
 
 BUILDLINK_TRANSFORM+=	rm:-Werror
 CFLAGS.NetBSD+=		-D_NETBSD_SOURCE	# needed for strcasestr(3) and strndup(3)
+
+# Needed for the xxd utility
+TOOL_DEPENDS+=		vim-share-[0-9]*:../../editors/vim-share
 
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../converters/libiconv/buildlink3.mk"
